# MetalEngine

./: LICENSE.md  README.md  renovate.json  settings.gradle
.github/workflows/: android.yml
app/: build.gradle
app/src/androidTest/java/com/niusounds/oboetest/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioOutput.cpp  CMakeLists.txt  MetalEngine.cpp  native-lib.cpp
app/src/main/java/com/niusounds/metalengine/: AudioInput.kt  AudioOutput.kt  AudioRecordData.kt  MetalEngine.kt
app/src/main/java/com/niusounds/oboetest/: AudioFeedback.kt  MainActivity.kt  ToneGenerator.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/niusounds/oboetest/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
metalengine/: build.gradle
metalengine/src/main/: AndroidManifest.xml
metalengine/src/main/cpp/: AudioInput.cpp  AudioOutput.cpp  CMakeLists.txt  MetalEngine.cpp
metalengine/src/main/kotlin/com/niusounds/metalengine/: AudioInput.kt  AudioOutput.kt  MetalEngine.kt
metalengine/src/main/kotlin/com/niusounds/metalengine/impl/: AudioInputImpl.kt  AudioOutputImpl.kt
sample/: build.gradle
sample/src/main/: AndroidManifest.xml
sample/src/main/java/com/niusounds/oboetest/: AudioFeedback.kt
sample/src/main/res/layout/: activity_main.xml
sample/src/main/res/values/: strings.xml
